--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,11 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
     <!-- Todo: put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <title>[Mason Sinner | Full Stack Developer</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="[username], [name], skill" />
+    <meta name="keywords" content="masonsinner, Mason Sinner, react.js, react.ts, typescript, python, html, css, javascript, sql, postgres, flask, full stack developer, front end developer, back end developer" />
     <!-- Todo: improve your SEO by adding a small description of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+    <meta name="description" content="Mason Sinner | Full Stack Developer IT Specialist HTML5, CSS, JavaScript, React, Python, TypeScript, SQL, Flask, Node.js, Windows, MacOS" />
 
     <link
       rel="stylesheet"
@@ -46,13 +46,13 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Hi, my name is <span class="text-color-main">Mason Sinner</span>
           <br />
           I'm the Unknown Developer.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
-            >Know more</a
+            >Learn More</a
           >
         </p>
       </div>
@@ -71,7 +71,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="assets/profile.jpg"
+                src="assets/Screenshot 2023-01-08 at 7.28.42 PM.jpg"
                 alt="Profile Image"
               />
             </div>
@@ -79,18 +79,24 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you have!
+                My fascination with technology began in my youth when I sought to optimize internet connectivity for lag-free online gaming. Recognized as the family "tech guy," I developed a reputation for troubleshooting and problem-solving. Despite my initial trajectory in the tech industry, I navigated a unique path.
+
+                Post high school, I obtained an IT Support Certification from Google, securing a role as a Tier 1 IT Support Technician with the Department of Transportation. Simultaneously, I pursued self-taught development, gradually progressing through the ranks. Seeking a more guided approach, I undertook an apprenticeship with Coding Temple, delving into modern frameworks like React and TypeScript, and expanding my skills to backend development using SQL and Python's Flask library.
+
+                This journey has equipped me with a versatile skill set and a resolute commitment to advancing in the technology field.
               </p>
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+
+                In addition to my tech journey, I'm a musician who enjoys performing live at venues in Houston and Los Angeles. Baseball remains a passion; I coach private lessons and play in local men's leagues. On the digital front, I still hold my own in online gaming.
+
+                Looking ahead, my goals include assisting my younger brother in reaching the MLB. Eventually, I aspire to establish a tech repair business or agency to empower new grads and self-taught developers. Before that, I'm eager to contribute my skills and passion by working for industry giants like Microsoft, Google, or Apple.
               </p>
               <span class="d-flex mt-3">
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="assets/resume.pdf"
+                  href="assets/Mason-Sinner-Resume.pdf"
                 >
                   View Resume
                 </a>
@@ -107,24 +113,24 @@
       <div class="container">
         <div class="project-wrapper">
           <h2 class="section-title dark-blue-text">Projects</h2>
-
+          <h6 class="section-title dark-blue-text">There is much more to be seen on my GitHub, such as a Full Stack Bug Ticketing System!</h6>
           <!-- Notice: each .row is a project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 0</h3>
+                <h3 class="project-wrapper__text-title">Double Tap Ecommerce</h3>
                 <div>
                   <p class="mb-4">
-                    Describe the project being very specific, you can use the Twitter standard: no more than 280 characters: 
-                    complement the information: the skills learned or reinforced in its realization and how you faced it, 
-                    prove to be proactive in the search for solutions.
+                    This project marked my inaugural collaboration, employing branches and cross-country teamwork. Together, we crafted an Ecommerce mock-up for DoubleTap using HTML, CSS, and Bootstrap, resulting in a responsive landing page, as well as dedicated sign-up/in and "How it Works" pages.
+
+                    My specific contributions encompassed the creation of the landing page, sign-up, and sign-in functionalities. Simultaneously, my partner spearheaded the development of the "How it Works" page. To explore our creation live and delve into the source code, click below!
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="projects/double-tap-landing/index.html"
                 >
                   See Live
                 </a>
@@ -132,7 +138,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/masonsinner/double-tap"
                 >
                   Source Code
                 </a>
@@ -151,7 +157,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/double-tap.png"
                     />
                   </div>
                 </a>
@@ -164,19 +170,19 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 1</h3>
+                <h3 class="project-wrapper__text-title">Gradient Background Generator</h3>
                 <div>
                   <p class="mb-4">
-                    Demonstrate in this description the skills of a programmer: such as having commitment, 
-                    having perseverance and accepting alternative solutions. Remember that being a portfolio you are not selling the project, 
-                    you are selling yourself, it reflects the resources used: Frameworks, libraries, platforms, etc.
+                    I crafted this dynamic background generator as a practical tool for real-time gradient visualization during webpage development. Leveraging HTML, minimal CSS, and straightforward JavaScript, I designed a web application that empowers users to create custom gradients. The added functionality includes obtaining the corresponding CSS values for the generated gradient.
+
+                    Experience this handy tool live and explore its source code by clicking below!
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="projects/Gradient Background/index.html"
                 >
                   See Live
                 </a>
@@ -184,7 +190,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/masonsinner/Background-Generator"
                 >
                   Source Code
                 </a>
@@ -203,7 +209,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/background-gen.png"
                     />
                   </div>
                 </a>
@@ -216,18 +222,19 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 2</h3>
+                <h3 class="project-wrapper__text-title">Amazon Mock Up</h3>
                 <div>
                   <p class="mb-4">
-                    If the project was collaborative, reflect it in this description, that will demonstrate communication and/or leadership skills. 
-                    Additionally, if you made use of the mastery of a second language, it will reflect on you professionalism.
+                    As one of my initial forays into front-end development, I undertook the recreation of the iconic Amazon sign-in page. Aptly named Famazon, this project showcases a responsive sign-in page mirroring its Amazon counterpart. Please note the absence of the Amazon logo, adhering to copyright considerations.
+
+                    this homage live and dive into the source code by clicking below!
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="/src/projects/Famazon/index.html"
                 >
                   See Live
                 </a>
@@ -235,7 +242,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/masonsinner/famazon"
                 >
                   Source Code
                 </a>
@@ -254,7 +261,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/famazon.png"
                     />
                   </div>
                 </a>
@@ -272,13 +279,13 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
+          <p class="contact-wrapper__text">If you like what you see, and want to work feel free to reach out!</p>
           <a
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+            href="mailto:mason.sinner.dev@gmail.com"
+            >Email</a
           >
         </div>
       </div>
@@ -292,13 +299,13 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a rel="noreferrer" href="#!" target="_blank">
+          <!-- <a rel="noreferrer" href="#!" target="_blank">
             <i class="fa fa-twitter fa-inverse"></i>
-          </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          </a> -->
+          <a rel="noreferrer" href="http://www.linkedin.com/in/mason-sinner-13679a226" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://github.com/masonsinner" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
@@ -308,13 +315,13 @@
         <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
         <p class="footer__text">
           © 2021 - Template developed by
-          <a rel="noreferrer" href="https://github.com/cobiwave" target="_blank"
-            >Jacobo Martínez</a
+          <a rel="noreferrer" href="https://github.com/masonsinner" target="_blank"
+            >Mason Sinner</a
           >
         </p>
 
         <!-- TO DO: remove this entire paragraph once you finish your portfolio -->
-        <p class="mt-3 pt-3">
+        <!-- <p class="mt-3 pt-3">
           <a
             rel="noreferrer"
             class="github-button"
@@ -337,7 +344,7 @@
           >
         </p>
       </div>
-    </footer>
+    </footer> -->
     <!-- /END Footer Section -->
 
     <script defer type="module" src="index.js"></script>
